--- a/src/composer.json
+++ b/src/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "twig/twig": "~3.0",
         "php-http/guzzle6-adapter": "^1.1",
-        "php-http/message": "^1.4"
+        "php-http/message": "^1.4",
+        "phpmailer/phpmailer": "^6.4"
     },
     "autoload": {
         "psr-4": {
